[package]
name = "invariants"
version = "0.1.3"
edition = "2021"
description = "Assertions for normal and invariant based development"
repository = "https://github.com/eytans/rust-invariants"
license = "MIT"
keywords = ["assertions", "assets", "testing", "debugging"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

[features]
default = ["warn"]
off = []
warn = []
error = []
debug = []
trace = []
info = []
